--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -8,7 +8,48 @@
   – & –  & A       & S 2 may be replaced by A throughout the piece \\
 }
 
-\eesToc{}
+\eesToc{
+  \begin{movement}{wosindwir}
+    \voice[ Das Volk]
+    Wo ſind wir? wir? die Furcht und Schrecken
+    und grauſe Dunkelheit bedecken?
+    Wir fühlen des Todes erſchreckliche Nacht!
+    O! deine Rache, Jehovah! erwacht!
+    Du zürneſt — du rächeſt — wen? dieſen Verbrecher? —
+    Nein, Herr! du biſt nicht des Gekreuzigten Rächer.
+    Du ſtrafeſt? — wer ſündigte? — tödtende Nacht!
+    Frolocke, Mizraim! dein Schickſal erwacht!
+    Der Herr hat ſein Juda dir ähnlich gemacht!
+  \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+}
 
 \eesScore
 
