--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -8,6 +8,13 @@
   – & –  & A       & S 2 may be replaced by A throughout the piece \\
 }
 
+Maria (A = Canto II)
+Eine aus den Weibern (S/A)
+Ein andrer aus dem Volke (T)
+Einer aus dem Volke (B)
+Der römiſche Hauptmann (B)
+
+
 \eesToc{
   \begin{movement}{wosindwir}
     \voice[ Das Volk]
@@ -22,9 +29,93 @@
     Der Herr hat ſein Juda dir ähnlich gemacht!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{werduauch}
+    \voice[Einer aus dem Volke]
+    Wer du auch ſeyſt, den man dort angeheftet hat,
+    wer du auch ſeyſt, Mesſias, oder ein Verräther,
+    Gott, oder auch ein Miſſethäter!
+    Du biſt der Mann, der nun, o ſchwarze That!
+    die grauſe Finſterniß erſchaffen.
+    Du tödteſt uns mit neuerfundnen Waffen!
+    O! richteten die Prieſter auch wohl recht? —
+
+    \voice[Ein andrer aus dem Volke]
+    Unglücklichs Land! unſeliges Geſchlecht!
+    Verloren ſind wir ſchon. Es nähert ſich die Stunde
+    des Unglücks, des Verderbens,
+    des Todes, des niemals erhörten Sterbens.
+    Verdammter Rath! durch dich geht Gottes Volk zu Grunde.
+    Ohnfehlbar iſt er der Mesſias, und unſchuldig.
+    Hoch rächet er ſich nun. —
+
+    \voice[Die Weiber und die Gläubigen]
+    \hspace*{3cm}Ja! Heil! Mesſias! Gott!
+    Unſchuldig biſt du, Herr! Du, deiner Feinde Spott!
+
+    \voice[Eine aus den Weibern]
+    Ja! dies bezeugt die nun erblaßte Sonne.
+    Du ſtirbſt. Es ſtirbt mit dir auch unſre Wonne
+    und unſre Hoffnung —
+
+    \voice[Die Weiber und die Gläubigen]
+    \hspace*{3cm}Herr! nun rächet dich der Himmel!
+
+    \voice[Einer aus dem Volke]
+    Verdammtes Urtheil! Pilatus! Prieſter! Rath!
+
+    \voice[Das Volk]
+    Man tödte ſie, die Schuldgen dieſer That!
+
+    \voice[Der römiſche Hauptmann]
+    Welch raſendes Getümmel!
+    Volk, voller Angſt! welch eine finſtre Wut!
+    Wie? foderſt du noch deiner Vorgeſetzten Blut?
+    Soldaten! wehrt dem Aufruhr! —
+
+    \voice[Einer aus dem Volke]
+    \hspace*{3cm}Halt!
+    Nicht du, nicht deine Schaar hemmt Eifer und Gewalt;
+    dies thut ein ſtärkrer Arm, ein höhrer Ruf.
+    Die Finſterniß, durch die kein Strahl des Lichtes dringet,
+    hält uns zurück. Die iſts, die unſer Wüten zwinget.
+    Doch nein! vielmehr der, der ſie ſchuf.
+    Und, o Gewaltiger! Jehovah! der biſt Du!
+
+    \voice[Das Volk]
+    O Finſterniß! o Nacht! iſt keine Rettung da?
+    Verflucht ſey Kaiphas! verflucht ſey Golgatha!
+
+    \voice[Der Hauptmann]
+    Cäcil, auf eile nach Jeruſalem,
+    die Schaaren zu verſtärken! —
+
+    \voice[Ein Soldat]
+    \hspace*{3cm}Herr! wer findet eine Bahn
+    in dieſer dicken Nacht?
+
+    \voice[Der Hauptmann]
+    \hspace*{3cm}Angſt, Zittern, Furcht und Schrecken!
+    Wie? ſollen die mich auch, wie dieſes Volk, bedecken?
+
+    \voice[Ein andrer aus dem Volke]
+    Ach! es iſt aus mit uns? Was haben wir gethan?
+
+    \voice[Die römiſchen Soldaten]
+    Helft, Götter! helft! Verdammte Zaubernacht!
+    Hier wird man ohne Feind im Finſtern umgebracht.
+
+    \voice[Maria]
+    Ach ſtütze mich, Johann! mein neuer Sohn!
+    Mich! die nicht mehr vor Schrecken ſtehen kann.
+    Welch Unglück prophezeyht die traurge Dunkelheit?
+    Die bange Finſterniß, die mich verhindert,
+    mein Heil und meinen Sohn im Sterben anzuſehn?
+    Sein ſanfter Blick, der ſonſt in tiefſter Traurigkeit
+    aufs ſüſſeſte die bängſten Schmerzen mindert,
+    fließt nicht mehr in mein Herz. Sein Ohr hört nicht mein Flehn.
+    Ach Sohn! ach Gott! ach! lebſt du, oder nicht?
+    Vielleicht, daß nun dein Aug’ im Tod’ entſchlummernd bricht!
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
