--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -6,11 +6,13 @@
 
 \eesCriticalReport{
   – & –  & A       & S 2 may be replaced by A throughout the piece \\
+  3 & 54 & vl 2    & 7th \eighthNote\ in \B1: e′8 \\
 }
 
 Maria (A = Canto II)
 Eine aus den Weibern (S/A)
 Ein andrer aus dem Volke (T)
+Jeſus (T)
 Einer aus dem Volke (B)
 Der römiſche Hauptmann (B)
 
@@ -117,9 +119,25 @@ Der römiſche Hauptmann (B)
     Vielleicht, daß nun dein Aug’ im Tod’ entſchlummernd bricht!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{otoedtet}
+    \voice[Maria]
+    O! tödtet mich nur auch, vermeßne Schaaren!
+    Mein Sohn iſt todt: ſo tödtet nun auch mich!
+
+    \voice[Jeſus]
+    Maria!
+
+    \voice[Maria]
+    Herr! ſo rufſt du warnend mir noch zu?
+    Du lebſt, mein Heil! du ſegneſt meine Ruh!
+    Doch ach! was ſoll mir dieſes Leben nützen?
+    Wer wird mich nun im höhern Alter ſtützen?
+    Was iſt Maria ohne dich?
+    Ach Gott! was muß die Mutter deines Sohns erfahren?
+    Mein Schmerz erwacht, der Troſt verlieret ſich.
+    Drum tödtet mich nur auch, vermeßne Schaaren!
+    Mein Sohn iſt todt: ſo tödtet nun auch mich!
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
