--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -9,10 +9,13 @@
   3 & 54 & vl 2    & 7th \eighthNote\ in \B1: e′8 \\
 }
 
+Eidli (S = Canto I)
 Maria (A = Canto II)
 Eine aus den Weibern (S/A)
 Ein andrer aus dem Volke (T)
 Jeſus (T)
+Johannes (T)
+Lazarus (T)
 Einer aus dem Volke (B)
 Der römiſche Hauptmann (B)
 
@@ -139,9 +142,86 @@ Der römiſche Hauptmann (B)
     Mein Sohn iſt todt: ſo tödtet nun auch mich!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{achheiland}
+    \voice[Maria]
+    Ach! Heiland! Sohn! ach tröſte mich! —
+    Mich tröſte mit der Stimme deines Mundes! —
+    Dein Wort iſt ſüſſer noch, als Milch und Honigſeim. —
+    Und ach! was bin ich ohne dich?
+    Und biſt du denn — doch ja! du biſt
+    der Stifter eines neuen Bundes:
+    O Herr! ſo ſieh auf uns, auf unſre bangen Schmerzen!
+    Ergieße deinen Troſt, der unſer Labſal iſt,
+    in unſre tiefgebeugte Herzen!
+    Sieh durch die dicke Nacht ins Dunkle meiner Seelen,
+    wo tauſend Martern mich, mich deine Mutter, quälen.
+    Erlöſer! — Seelenfreund! — Ach Sohn! — Die Worte fehlen mir —
+    die Zunge ſtarrt — ach! —
+
+    \voice[Johannes]
+    \hspace*{3cm}Gott! mein Herr! mein Meiſter!
+    Im Geiſte nah ich mich zu dir.
+    Anbetenswürdiger! Du kenneſt meine Triebe:
+    Ich bin durchaus entflammt von deiner heilgen Liebe.
+    Herr! dieſe dunklen Stunden,
+    die deine Mörder ſelbſt durchdringend rühren,
+    umnebeln auch mein Herz, und tödten mich mit Wunden,
+    die ganz unheilbar ſind. Herr! dich, dich zu verlieren —
+    Gedanke! ſchwärzer, als die Nacht, die uns umhüllt! —
+    Herr! der Verluſt wirft mich in eine Gruft von Schrecken,
+    aus der mich, auſſer du, nichts wird, nichts kann erwecken. —
+    Wiewohl! — Vielleicht erwachſt du wieder! —
+    die Hoffnung! — würde ſie erfüllt! —
+    O! Freude herrſcht ſie ſchon durch alle meine Glieder. —
+    Ja! Herr, du wirſt, nach dreyer Tage Friſt,
+    du ſagſt es ſelbſt, aufs neu erwachen,
+    und dieſen Tempel, der nun faſt zerſtöret iſt,
+    aufs neue baun, und zwar weit herrlicher.
+    Du wirſt ihn auch weit unvergänglicher,
+    weit ſchöner machen,
+    als er zuvor geweſen. — Heiland! — Ja, es iſt gewiß!
+    Dann weichen Furcht und Angſt; dann weicht die Finſterniß.
+
+    \voice[Eidli]
+    Mein Lazarus! mein mir von Gott geſchaffner Freund!
+    Mein Liebſter! ſäheſt du, wie dieſes Auge weint!
+    Es weint — ach Gott! — Still, wie der Tod,
+    werd ich durch die Empfindung dieſer Noth,
+    die alles Land bedeckt.
+    Nicht, weil die Finſterniß die bange Welt erſchreckt,
+    nein, Freund! weil unſer Helfer ſtirbt;
+    da der Erwecker ſtirbt, der dir und mir das Leben
+    aufs neu ehmals allmächtig hat gegeben,
+    als unſer Körper kalt, erſtarrt, entſeelet war.
+
+    \voice[Lazarus]
+    Mich macht mein Kummer ſtumm, — die matten Glieder beben, —
+    das Mark in dem Gebein gerinnt, das Blut ſteht ſtill —
+    wird ſtarr und kalt — wie ehmals mir geſchah,
+    als mich die Lebenskraft verließ,
+    und dieſem Leib der Tod den Geiſt entriß. —
+    Mit Ach und Weh erfülltes Golgatha! —
+    Ich weiß nicht, was ich denk und will —
+    mein weinend Auge bricht —
+    und würde ſchon die Finſterniß verſchwinden:
+    So würde mein gebrochnes Augenlicht
+    doch keinen Strahl des Lichts empfinden.
+    Mein Herr! mein Gott! Mesſias! Tröſter! Ach! —
+    Nie, Juda! drückte dich ein ähnlich ſtarker Schmerz —
+    durchſchaudernd überſtrömt das ängſtlichbängſte Herz
+    ein kalter Thränenbach —
+    du ſtirbſt —
+
+    \voice[Eidli]
+    \hspace*{3cm}Du ſtirbſt! wer kann daran gedenken?
+
+    \voice[Lazarus]
+    Du ſtirbſt — wen muß dieß nicht erſchütterndtödlich kränken?
+
+    \voice[Eidli und Lazarus]
+    Wie? mußten wir denn darum auferſtehen,
+    um hier auf Golgatha, Herr! deinen Tod zu ſehen?
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
