--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -5,8 +5,10 @@
 \eesTitlePage
 
 \eesCriticalReport{
-  – & –  & A       & S 2 may be replaced by A throughout the piece \\
-  3 & 54 & vl 2    & 7th \eighthNote\ in \B1: e′8 \\
+  – & –   & A       & S 2 may be replaced by A throughout the piece \\
+  3 & 54  & vl 2    & 7th \eighthNote\ in \A1: e′8 \\
+  5 & 52  & vla     & 2nd \eighthNote\ in \A1: \flat b8 \\
+    & 242 & Eidli   & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
 }
 
 Eidli (S = Canto I)
@@ -223,9 +225,35 @@ Der römiſche Hauptmann (B)
     um hier auf Golgatha, Herr! deinen Tod zu ſehen?
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{duherrscher}
+    \voice[Eidli]
+    Du Herrſcher über Tod und Leben!
+    Nimm hin das, was du mir gegeben.
+    Stirb ohne deine Eidli nicht!
+
+    \voice[Lazarus]
+    Zu meiner Gruft, der Freunde Schrecken,
+    kamſt du, mein Heil, mich aufzuwecken,
+    zu ſehn, wie itzt dein Auge bricht.
+
+    \voice[Eidli und Lazarus]
+    O Jeſu! Freund! dieß Leben ſchenkſt du mir:
+    Nimm dein Geſchenk im Tode doch zu dir!
+
+    \voice[Eidli]
+    Zwar, Freund! bindt uns das Band der reinſten Liebe;
+    doch wie? vergnügen irrdſche Triebe,
+    wenn mir mein Heil, mein Jeſus, ſtirbt?
+
+    \voice[Lazarus]
+    Zwar, Freundinn! fand in deinem frommen Blicke
+    ehmals mein Aug’ ein edles Glücke;
+    doch was iſt das, wenn Jeſus ſtirbt?
+
+    \voice[Eidli und Lazarus]
+    Ja, Herr! nimm Neigung, Leben, alles hin!
+    Wohl mir, wenn ich im Tode bey dir bin!
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
