--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -255,9 +255,30 @@ Der römiſche Hauptmann (B)
     Wohl mir, wenn ich im Tode bey dir bin!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{wieliebens}
+    \voice[Johannes]
+    Wie liebenswürdig ſind die Triebe
+    der göttlichen, der heilgen Jeſusliebe,
+    die euch und mich zu dieſem Kreuze zieht!
+    In dieſer Finſterniß, da Alles ſeufzt und weinet,
+    da uns kein Troſt, kein Hoffnungslicht erſcheinet,
+    da auch dem Auge ſelbſt der Hoffnungsquell entflieht:
+    Wer wollt’ um den Verluſt nicht kläglich wimmernd zagen?
+    Wer wollte nicht, mein Heil! um dich mit Jammer klagen?
+    Mit Jammer! der ſogar die Wut der Feind’ erſtickt,
+    indem die Todesnacht ihr Raſen unterdrückt.
+    O grauſame, o fürchterliche Schatten!
+    Entzieht den Augen nicht das, was den Geiſt erquickt!
+    Entzieht den Augen nicht den Urquell meiner Liebe,
+    den heilgen Gegenſtand der undurchforſchten Triebe!
+    Stärkt nur ein einzigmal mich Matten
+    mit einem dunklen Licht. Denn ach! das größte Leiden,
+    das Schrecklichſte iſt dies: den heilgen Blick zu meiden,
+    von dem mein Leben ſtammt.
+    O! flöſſe dieſer nur in das gepreßte Herz:
+    O! ſo ertrug es willig ſeinen Schmerz!
+    So aber iſt es, Gott! zum ſchwärzſten Gram verdammt.
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
