fließt zitternde thränen

--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -9,6 +9,7 @@
   3 & 54  & vl 2    & 7th \eighthNote\ in \A1: e′8 \\
   5 & 52  & vla     & 2nd \eighthNote\ in \A1: \flat b8 \\
     & 242 & Eidli   & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
+  7 & 71  & Johannes & 1st \halfNote\ in \A1: \flat g′4–\flat g′8–\flat g′8 \\
 }
 
 Eidli (S = Canto I)
@@ -280,9 +281,18 @@ Der römiſche Hauptmann (B)
     So aber iſt es, Gott! zum ſchwärzſten Gram verdammt.
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{fliesstzitternde}
+    \voice[Johannes]
+    Fließt, zitternde Thränen, entdecket mein Leiden!
+    Dich ſoll ich, o zärtlichſter Gegenſtand, meiden.
+    Es hat mich dieß tödtende Dunkel der Nacht
+    auch um deine Blicke, mein Liebſter! gebracht.
+
+    Und obſchon die Hoffnung, zwar dunkler, als Nächte,
+    mich Weinenden tröſtend zu ſtärken gedächte;
+    und obſchon ein Fünkchen des Lichtes erwacht:
+    So tödtet doch Hoffnung und Alles die Nacht.
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
