--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -294,6 +294,53 @@ Der römiſche Hauptmann (B)
     So tödtet doch Hoffnung und Alles die Nacht.
   \end{movement}
 
+  \begin{movement}{dochherz}
+    \voice[Johannes]
+    Doch Herz! von manchen Wiederſprüchen voll!
+    Verzweifle nicht! bald, bald vergeht die Nacht;
+    bald, bald erſcheint die Zeit, da Jeſus dir erwacht!
+    Wie? hab ich nicht zuvor, ich ſelbſt? daran gedacht?
+    Ja, dieſer Troſt hat ſchon mein Herz erhellt gemacht.
+    Was pochſt du Herz? Sein Wort beſtimmt gewiß
+    das, was geſchehen ſoll,
+    und bald entweicheſt du, grauſame Finſterniß!
+    Doch, bis dieß Wort, Herr! zur Erfüllung wird gebracht,
+    ſo lange will ich, Freunde, mit euch weinen;
+    denn keine Thränen ſind zu viel.
+    Getroſt! der Schmerz währt eine kurze Zeit:
+    ſein liebreich Angeſicht wird glänzend bald erſcheinen,
+    zertheilt die Angſt, ſo wie die Dunkelheit,
+    und ſetzt dem kurzen Gram ein froherreichtes Ziel.
+  \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
+  % \begin{movement}{}
+  %   \voice[]
+  % \end{movement}
+
   % \begin{movement}{}
   %   \voice[]
   % \end{movement}
