--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -10,6 +10,8 @@
   5 & 52  & vla     & 2nd \eighthNote\ in \A1: \flat b8 \\
     & 242 & Eidli   & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
   7 & 71  & Johannes & 1st \halfNote\ in \A1: \flat g′4–\flat g′8–\flat g′8 \\
+  9 & 70  & T       & 1st \halfNote\ in \A1: f2 \\
+    & 117 & B       & 8th \sixteenthNote\ in \A1: \flat f16 \\
 }
 
 Eidli (S = Canto I)
@@ -25,7 +27,7 @@ Der römiſche Hauptmann (B)
 
 \eesToc{
   \begin{movement}{wosindwir}
-    \voice[ Das Volk]
+    \voice[Das Volk]
     Wo ſind wir? wir? die Furcht und Schrecken
     und grauſe Dunkelheit bedecken?
     Wir fühlen des Todes erſchreckliche Nacht!
@@ -313,9 +315,66 @@ Der römiſche Hauptmann (B)
     und ſetzt dem kurzen Gram ein froherreichtes Ziel.
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{omatter}
+    \voice[Die Weiber und die Gläubigen]
+    O matter Troſt bey ſo viel Kummer!
+    Er liegt ja ſchon im Todesſchlummer,
+    nicht einen Seufzer höret man.
+    Sein Aug iſt dunkler, als die Lüfte.
+    O Tod! eröffne deine Grüfte!
+    Verſchling ein Volk, das nicht mehr leben kann.
+
+    \voice[Maria]
+    Mein Sohn! hör deines Volks betrübtes Seufzen an!
+    Verlaſſen ſtehn die Deinen.
+    Mein Sohn! erbarmt dich nicht der Mutter ängſtlich Weinen?
+    Biſt du nicht mehr zu unſrer Rettung nah?
+    Ein jeder ſteht und harrt, auf was? nur aufs Verderben.
+    Ein jeder ſeufzt und hofft, allhier auf Golgatha
+    zum wenigſten mit dir zu ſterben.
+    Kein einzger wünſchet, dich zu überleben.
+
+    \voice[Eidli]
+    Mein Wunſch, mein ganzer Wunſch ſtimmt damit überein.
+
+    \voice[Die Weiber und die Gläubigen]
+    Kann wohl ein andrer Wunſch uns Armen möglich ſeyn?
+
+    \voice[Eidli]
+    Das, was er mir ſonſt gab, mein wundervolles Leben,
+    verlang ich nicht mehr zu genieſſen.
+    Es konnte blos aus ihm die Luft des Lebens flieſſen.
+    Was Leben! o Verluſt! der Retter ſelbſt iſt todt —
+    ach todt — ohnfehlbar iſt ſein Augenlicht erblaßt —
+
+    \voice[Lazarus]
+    Ohnfehlbar iſt mein Heil, mein Auferwecker todt.
+    Nun fühl ich erſt des Lebens ſchwere Laſt. —
+    Doch Herr! — und lebſt du noch? — Du? — Quell von meinem Leben —
+    Wie? — oder haſt du ſchon den Geiſt — ach! aufgegeben? —
+
+    \voice[Die Weiber und die Gläubigen]
+    Ach! er iſt todt! — Ja! — dieſe Schreckensnacht
+    hat uns um unſern Herrn, um alle Ruh gebracht!
+
+    \voice[Johannes]
+    Getroſt! verzaget nicht! Erwartet größre Thaten!
+    Schon hab ichs euch geſagt. Ich bin noch mehr bewegt,
+    indem ein höhrer Trieb des Troſtes mich erregt. —
+    Weiſſagend ruf ich euch in ſelger Hoffnung zu:
+    Es eilet im Triumph der Held nunmehr zur Ruh.
+    Ihm ſoll zum Wohl der Welt der größte Sieg gerathen!
+
+    \voice[Maria]
+    Ich weiß nicht, welcher Trieb dem Ausſpruch Beyfall giebt.
+    Mein theurſter Sohn, mein Gott, der mich ſo ſehr geliebt,
+    wird Marter, Kreuz und Tod und Grab
+    zu Quellen eines Heils, das uns verewget, machen.
+    Ihr Gläubgen! ſeyd getroſt! legt Furcht und Trauren ab!
+
+    \voice[Die Weiber und die Gläubigen]
+    Ach! wäre dieß gewiß! ach! mögt er bald erwachen!
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
