--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -376,9 +376,19 @@ Der römiſche Hauptmann (B)
     Ach! wäre dieß gewiß! ach! mögt er bald erwachen!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{selge}
+    \voice[Maria]
+    Selge Hoffnung! wie ſtärkſt du die Glieder!
+    Glieder! ſtarr von Furcht und Tod.
+    Süſſer Jeſus! ja, wir leben wieder,
+    und erwarten ſtill das Ende dieſer Noth.
+    Held! ja, dir wird bald der Sieg gerathen.
+    Uns beleben ſchon die Früchte deiner Thaten!
+
+    \voice[Die Weiber und die Gläubigen]
+    Held! ja, dir wird bald der Sieg gerathen.
+    Uns beleben ſchon die Früchte deiner Thaten!
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
