was für ein volk

--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -5,13 +5,14 @@
 \eesTitlePage
 
 \eesCriticalReport{
-  – & –   & A       & S 2 may be replaced by A throughout the piece \\
-  3 & 54  & vl 2    & 7th \eighthNote\ in \A1: e′8 \\
-  5 & 52  & vla     & 2nd \eighthNote\ in \A1: \flat b8 \\
-    & 242 & Eidli   & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
-  7 & 71  & Johannes & 1st \halfNote\ in \A1: \flat g′4–\flat g′8–\flat g′8 \\
-  9 & 70  & T       & 1st \halfNote\ in \A1: f2 \\
-    & 117 & B       & 8th \sixteenthNote\ in \A1: \flat f16 \\
+  –  & –   & A       & S 2 may be replaced by A throughout the piece \\
+  3  & 54  & vl 2    & 7th \eighthNote\ in \A1: e′8 \\
+  5  & 52  & vla     & 2nd \eighthNote\ in \A1: \flat b8 \\
+     & 242 & Eidli   & 2nd/3rd \eighthNote\ in \A1: c″8–d″16–\flat e″16 \\
+  7  & 71  & Johannes & 1st \halfNote\ in \A1: \flat g′4–\flat g′8–\flat g′8 \\
+  9  & 70  & T       & 1st \halfNote\ in \A1: f2 \\
+     & 117 & B       & 8th \sixteenthNote\ in \A1: \flat f16 \\
+  11 & 1   & soli    & 5th \eighthNote\ missing in \A1 \\
 }
 
 Eidli (S = Canto I)
@@ -390,9 +391,41 @@ Der römiſche Hauptmann (B)
     Uns beleben ſchon die Früchte deiner Thaten!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{wasfuer}
+    \voice[Der römiſche Hauptmann]
+    Was für ein Volk iſt das? Itzt, da die Finſterniß
+    die Welt ſo furchtbar ſchrecket,
+    und eine ſchwarze Nacht
+    uns bis aufs Äuſſerſte der bängſten Furcht gebracht, —
+    (O! eine Finſterniß! die ſelbſt den Tag verdecket!)
+    faſt zittr’ ich! — Itzt da dieſe Schreckensnacht
+    auf nieerhörte Art den Himmel ganz verdunkelt,
+    daß auch kein einzger Stern, kein mattes Wölkchen funkelt,
+    daß man nicht Himmel, Luft, nicht Erd und Menſchen ſieht,
+    nicht ſeinen Nachbar merkt, nicht Schwerdt und Harniſch blinken,
+    da, wenn man fällt, man in den Abgrund denkt zu ſinken,
+    da man vor Angſt ſich ſelbſt und alles flieht,
+    und doch ſich fürchtet, zu entfliehen,
+    da auch die Kühnſten ſich dem Schrecken nicht entziehen,
+    die Helden ſtill und heimlich ächzen,
+    von tiefen Seufzern alle Gaumen lechzen:
+    Wie? da erholen ſich der ſchwachen Weiber Herzen,
+    und ſiegen über uns und über Angſt und Schmerzen? —
+    Zertheile Jupiter! — doch nein! —
+    hat Jupiter wohl Theil an ſo viel Wundern? —
+    Wie? — Nicht ein Jupiter! — Es muß ein höhres Weſen ſeyn. —
+    Ein Sterbender! — um den die Sonne ſelbſt verſchwindet —
+    Und Weiber — die im Schrecken herzhaft werden —
+    furchtſame Männer — ſonſt die feigſten dieſer Erden,
+    von einem ſchwachen Strahl der Hoffnung ſtark entzündet —
+    dort ein Gekreuzigter — von Geiſſeln ganz zerriſſen,
+    voll Wunden ohne Zahl, matt, kraftlos, todt und kalt, —
+    dem väterlichen Volk zum Scheuſal aufgeſtellt —
+    und kurz: ein Schimpf, ein Spott der Welt —
+    der, der flößt noch mit unbegreiflicher Gewalt
+    dem Häuflein, das ihn ehrt, Geduld und Hoffnung ein? —
+    Der ſoll ein Troſt, ein Schutz, und ein Erretter ſeyn? —
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
