--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -427,9 +427,18 @@ Der römiſche Hauptmann (B)
     Der ſoll ein Troſt, ein Schutz, und ein Erretter ſeyn? —
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{wobinich}
+    \voice[Der römiſche Hauptmann]
+    Wo bin ich? — Was rühret mich? —
+    Verwirrung! — Entſetzen! — Nacht und Tod!
+    Und Sonne! — wo biſt du? — verſchwunden —
+    und was durchſchaudert mich? —
+    Sinds Schmerzen? — ſinds Wunden? —
+    Nein! — Herz! was bebſt du? — welche Noth! —
+    In Finſterniß — erbärmliche Geſtalt! —
+    Natur! — woher ſo ſchreckliche Gewalt? —
+    Gekreuzigter! — vielleicht durch dich?
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
