--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -440,9 +440,86 @@ Der römiſche Hauptmann (B)
     Gekreuzigter! — vielleicht durch dich?
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{dochtraeum}
+    \voice[Der römiſche Hauptmann]
+    Doch träum ich? — Wird es Tag? — Hilf Himmel! welcher Schein!
+    Welch Wunder! was geſchieht? — Die Sonne glänzet wieder?
+    die Finſterniß entweicht, ſo plötzlich, als ſie kam!
+
+    \voice[Das Volk]
+    O Wunder!
+
+    \voice[Eine aus den Weibern]
+    \hspace*{3cm} Jeſus lebt! lebt auch erſtorbne Glieder!
+
+    \voice[Die Weiber und die Gläubigen]
+    Er lebt!
+
+    \voice[Einer aus dem Volke]
+    \hspace*{3cm}Es ſterben Furcht und Gram!
+    Getroſt! Gott iſt verſöhnt, ſein Zorn geſtillt.
+    Das Urtheil iſt nunmehr beſtätigt, bald erfüllt.
+    Gott foderte des Nazareners Blut.
+
+    \voice[Das Volk]
+    Wir Feigen zitterten aus bloßem Mißverſtande.
+    Die Prieſter irrten nicht.
+
+    \voice[Johannes]
+    \hspace*{3cm}O blinde Wut!
+    Unſelges Volk! der Menſchheit Schande!
+    Verſtockter Schwarm! den man, kaum da die Nacht entflieht,
+    in vorger Raſerey ſich tollkühn wälzen ſieht!
+    Den des Unſchuldigen halbtodtes Leben kränket,
+    das er mit neuem Grimm nun zu verfolgen denket.
+    Zwar Jeſus lebt. Doch kann das wohl ein Leben heiſſen,
+    das Wunden, Schmerz und Schmach und Todesangſt zerreiſſen?
+    Seht, Gottesmörder! Seht nur ſeine Martern an! —
+    ſeht ſie! — erbebt! — ſeufzt, ächzt: was haben wir gethan?
+
+    \voice[Jeſus]
+    Mein Gott! mein Gott! warum haſt du mich verlaſſen?
+
+    \voice[Die Weiber und die Gläubigen]
+    Ach! banger Ruf! wer kann die Deutung faſſen?
+
+    \voice[Johannes]
+    Jehovah! Gott! wie ſeufzt das Lamm!
+    das Lamm! das ſich bey dir für alle Welt verbürgt,
+    und das itzt an des Kreuzesſtamm
+    der Schuldner Undank ſelbſt erwürgt.
+    Wie ſeufzt das rechte Opferlamm,
+    das nun des Vaters Zorn im Innerſten der Seele fühlt,
+    das eine Angſt, die unbeſchreiblich iſt,
+    aufs Grauſamſte durchwühlt.
+    O Welt! ſieh! alle deine Sünden
+    muß itzt das Lamm aufs Schrecklichſte empfinden!
+    Von Gott verlaſſen! ach! wie unergründlich ſchwer
+    quält dieſe Seelenangst! —
+
+    \voice[Maria]
+    \hspace*{3cm} Sohn! Heiligſter!
+    War das die Seelenangſt, die in den finſtern Stunden,
+    du Sündentilger! haſt empfunden?
+    War darum jenes Licht, der Sonnenglanz, verſchwunden?
+
+    \voice[Die Weiber und die Gläubigen]
+    Angſt! Schrecklichſte! bey der die Sonne ſelbſt erblaßt!
+
+    \voice[Lazarus]
+    Wie unbeſchreiblich ſchwer preßt dich, Herr! unſrer Sünden Laſt!
+
+    \voice[Eidli]
+    Noch unbeſchreiblicher muß deine Marter ſeyn.
+
+    \voice[Die Weiber und die Gläubigen]
+    Verlaſſen! ach! von Gott biſt du, gerechtes Lamm!
+    und doch, erretteſt du die undankbare Welt.
+
+    \voice[Der römiſche Hauptmann]
+    Wer dringt in dieß Geheimniß ein?
+    Wie? daß ſogar ein Schaudern mich befällt?
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
