was für martern; mich dürstet

--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -16,7 +16,7 @@
 }
 
 Eidli (S = Canto I)
-Maria (A = Canto II)
+Maria (A = Canto II; in 14 Canto I)
 Eine aus den Weibern (S/A)
 Ein andrer aus dem Volke (T)
 Jeſus (T)
@@ -521,13 +521,56 @@ Der römiſche Hauptmann (B)
     Wie? daß ſogar ein Schaudern mich befällt?
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{martern}
+    \voice[Maria]
+    Was für Martern, was für Plagen
+    haſt du, Herr! bisher ertragen!
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+    \voice[Johannes]
+    Was für Striemen, Schläg’ und Wunden
+    hat dein heilger Leib empfunden!
+
+    \voice[Maria und Johannes]
+    Aber ach! dein innrer Seelenſchmerz
+    ach! der zerreißt weit ſchrecklicher dein Herz!
+
+    \voice[Maria]
+    Für alle Welt wollſt du bezahlen:
+    drum duldſt du ſo viel Angſt und Qualen.
+
+    \voice[Johannes]
+    Der Zorn des Vaters ſchnaubte Rache:
+    Du, Herr, vertratſt des Sünders Sache.
+
+    \voice[Maria und Johannes]
+    Ja! den Sünder haſt du frey gemacht,
+    den, der Gottes Zorn auf dich gebracht.
+  \end{movement}
+
+  \begin{movement}{michduerstet}
+    \voice[Jeſus]
+    Mich dürſtet!
+
+    \voice[Johannes]
+    Dich dürſtet, Seelenfreund! nach ſo viel Pein und Plagen?
+    Was Wunder! du haſt ja des Tages Laſt getragen.
+    Doch warum dürſtet dich? was macht die Zunge matt?
+    Des Sünders Straf und Schuld, die er verdienet hat.
+    Dich dürſtet, Herr! nach unſrer Seligkeit,
+    und die erringſt du uns durch ſo viel Kampf und Streit.
+    Schaut, Menſchen, ſchaut den Herrn, den Lebensfürſten
+    blos eurer Sünden wegen dürſten.
+    Itzt, da die Marter ihn beynahe hat entſeelt,
+    da ihn die letzte Quahl vor ſeinem Tode quählt,
+    weil ihn des Sünders Hand den Mördern gleich gemacht,
+    da, da hat er an ſeine Henker noch gedacht.
+    Ihn dürſtet, auch nach ihrer Seligkeit.
+
+    \voice[Maria]
+    Ihn dürſtet! — Seht — der Mörder wilde Gütigkeit:
+    ein herber Trank muß ſeiner letzten Pein
+    ein bittres Labſal ſeyn!
+  \end{movement}
 
   % \begin{movement}{}
   %   \voice[]
