du wirst, o herr

--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -13,10 +13,11 @@
   9  & 70  & T       & 1st \halfNote\ in \A1: f2 \\
      & 117 & B       & 8th \sixteenthNote\ in \A1: \flat f16 \\
   11 & 1   & soli    & 5th \eighthNote\ missing in \A1 \\
+  16 & 76  & vla     & 2nd \halfNote\ in \A1: c′4–c′4 \\
 }
 
 Eidli (S = Canto I)
-Maria (A = Canto II; in 14 Canto I)
+Maria (A = Canto II)
 Eine aus den Weibern (S/A)
 Ein andrer aus dem Volke (T)
 Jeſus (T)
@@ -24,6 +25,7 @@ Johannes (T)
 Lazarus (T)
 Einer aus dem Volke (B)
 Der römiſche Hauptmann (B)
+Ein Soldat (B)
 
 
 \eesToc{
@@ -572,9 +574,21 @@ Der römiſche Hauptmann (B)
     ein bittres Labſal ſeyn!
   \end{movement}
 
-  % \begin{movement}{}
-  %   \voice[]
-  % \end{movement}
+  \begin{movement}{duwirst}
+    \voice[Die Weiber und die Gläubigen]
+    Du wirſt, o Herr! für unſre Sünden
+    mit einem herben Trank getränkt;
+    und ach! bis in den Tod mit Spott und Hohn gekränkt.
+
+    Du mußt, da ſchon dein Auge bricht,
+    der Mund vertrocknet, bleich das Angeſicht,
+    die Bosheit deiner Feind empfinden;
+    da doch dein Tod der Welt das Leben ſchenkt.
+
+    So wirſt du, Herr! für unſre Sünden
+    mit einem herben Trank getränkt;
+    und ach! bis in den Tod mit Spott und Hohn gekränkt.
+  \end{movement}
 }
 
 \eesScore
